--- a/libgptb/config/task_config.json
+++ b/libgptb/config/task_config.json
@@ -66,7 +66,7 @@
     },
     "SSGCL": {
         "allowed_model": ["MVGRLg","GraphCL","JOAO","GraphMAE","InfoGraph"],
-        "allowed_dataset": ["MUTAG","reddit_threads","github_stargazers","ogbg-molhiv", "ogbg-ppa", "ogbg-molpcba"],
+        "allowed_dataset": ["reddit_threads","ogbg-molhiv", "ogbg-ppa", "ogbg-molpcba", "PCQM4MV2"],
         "MVGRLg": {
             "dataset_class": "PyGDataset",
             "executor": "MVGRLgExecutor",
@@ -81,16 +81,6 @@
             "dataset_class": "PyGDataset",
             "executor": "JOAOExecutor",
             "evaluator": "JOAOEvaluator"
-        },
-        "InfoGraph": {
-            "dataset_class": "PyGDataset",
-            "executor": "InfoGraphExecutor",
-            "evaluator": "InfoGraphEvaluator"
-        },
-        "GraphMAE": {
-            "dataset_class": "MAEDataset",
-            "executor": "GraphMAEExecutor",
-            "evaluator": "GraphMAEEvaluator"
         },
         "InfoGraph": {
             "dataset_class": "PyGDataset",
